Tue Nov 30 09:31:55 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

        * htdig/Retriever.cc (IsValidURL): Add valid_extensions list handling,
	make it and bad_extensions case insensitive.
        * htcommon/defaults.cc: Add config attribute valid_extensions,
        with default as empty.
	* htdoc/attrs.html, cf_by{name,prog}.html: documented valid_extensions

Tue Nov 30 09:02:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href & got_redirect): remove all of Patrick's
	case insensitive server code, to replace it with Geoff's fix to URL.cc
	* htlib/URL.cc(normalizePath, path): If not case_sensitive,
	lowercase the URL. Should ensure that all URLs are appropriately
	lowercased, regardless of where they're generated.

Mon Nov 29 20:25:01 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc, htdig/Retriever.h, htdig/Server.cc(push),
	htdig/Server.h: added Alexis's patch for persistent local digging
	even if HTTP server is down. Also made new GetLocal() method
	call GetLocalUser() itself, to simplify its use, and made it
	non-private, for eventual use by Server code.

Mon Nov 29 19:18:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href & got_redirect): corrections to case
	insensitive server fix, to handle redirects, to make more thorough
	use of mapped URL, and to update it after normalization.

Fri Nov 26 17:14:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): always c.close() the connection
	when returning.
	* htdig/HTML.cc(HTML & do_tag): add code to turn off indexing between
	<style> and </style> tags.

Fri Nov 26 16:31:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc(Read): fixed to allow final line without
	terminating newline character, rather than ignoring it.
	* htlib/String.cc(write): added Alexis Mikhailov's fix to bump up
	pointer after writing a block.